--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SampleApp</string>
     <string name="action_settings">Settings</string>
+
+    <string name="error_content">Content not loaded</string>
 </resources>
